--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "are you weird?",
   "main": "app.js",
   "scripts": {
-    "start" : "node app.js",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -12,6 +12,8 @@
   "dependencies": {
     "express": "^4.12.3",
     "q": "^1.3.0",
-    "express-promise": "^0.4.0"
+    "express-promise": "^0.4.0",
+    "uuid": "^2.0.1",
+    "ioredis": "^1.1.4"
   }
 }
