--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "q": "^1.3.0",
     "express-promise": "^0.4.0",
     "uuid": "^2.0.1",
-    "ioredis": "^1.1.4"
+    "ioredis": "^1.1.4",
+    "lodash": "^3.8.0"
   }
 }
